:lipstick: feat: Estilizaçao CSS

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/css/reset.css" />
     <link rel="stylesheet" href="./src/css/style.css" />
+    <link rel="stylesheet" href="./src/css/responsive.css" />
     <title>Image Slider</title>
   </head>
   <body>
@@ -31,7 +32,7 @@
         </div>
       </div>
       <div class="image">
-        <img src="./src/images/boat.png" alt="starry night image" />
+        <img src="./src/images/starry-night.png" alt="starry night image" />
         <div class="infos">
           <h2 class="title">Starry Night</h2>
           <h2 class="author">Vincent Van Gogh</h2>
